bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type lettre
var string: lettre=' '
            ^