bdr.BDR.scala.code
var string: lettre=' '
if (estSurMessage()) {
  
}